--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,8 @@ button:focus {
   .home_banner_area .banner_inner {
     width: 100%; }
     .home_banner_area .banner_inner .home_left_img {
-      padding-top: 50px; }
+      padding-top: 30px;
+      padding-bottom: 30px; }
     .home_banner_area .banner_inner .col-lg-6 {
       vertical-align: middle;
       align-self: center; }
