--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ Table of Content:
 @import url("https://fonts.googleapis.com/css?family=Heebo:300,400,500,700|Roboto:300,400,500,700");
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
+
 .list {
   list-style: none;
   margin: 0px;
@@ -49,7 +50,9 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   font-weight: normal;
-  color: #777777; }
+  /*color: #777777;*/ 
+  color:#fff;
+  background:#1d1e21;}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Heebo", sans-serif;
