--- a/css/responsive.css
+++ b/css/responsive.css
@@ -45,7 +45,7 @@
         margin-bottom: 23px;
     }
 	.header_area .navbar {
-		background: #fff;
+		/*background: #fff;*/
 	}
     .navbar-toggler[aria-expanded="false"] span:nth-child(2) {
 		opacity: 1;
@@ -67,7 +67,7 @@
 		display: block;
 		width: 25px;
 		height: 3px;
-		background: #8490ff;
+		/*background: #8490ff;*/
 		margin: auto;
 		margin-bottom: 4px;
 		transition: all 400ms linear;
@@ -119,7 +119,7 @@
 		line-height: 40px;
 	}
 	.header_area.white_menu .navbar .nav .nav-item .nav-link {
-		color: #222;
+		/*color: #222;*/
 	}
 	/* End Main Menu Area css
 	============================================================================================ */
