--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -74,9 +74,9 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-/*     color: #212529; */
+    color: #212529;
     text-align: left;
-/*     background-color: #fff */
+    background-color: #fff
 }
 
 [tabindex="-1"]:focus {
@@ -176,14 +176,14 @@ sup {
 }
 
 a {
-/*     color: #007bff; */
+    color: #007bff;
     text-decoration: none;
-/*     background-color: transparent; */
+    background-color: transparent;
     -webkit-text-decoration-skip: objects
 }
 
 a:hover {
-/*     color: #0056b3; */
+    color: #0056b3;
     text-decoration: underline
 }
 
@@ -238,7 +238,7 @@ table {
 caption {
     padding-top: .75rem;
     padding-bottom: .75rem;
-/*     color: #6c757d; */
+    color: #6c757d;
     text-align: left;
     caption-side: bottom
 }
@@ -469,7 +469,7 @@ small {
 .mark,
 mark {
     padding: .2em;
-/*     background-color: #fcf8e3 */
+    background-color: #fcf8e3
 }
 
 .list-unstyled {
@@ -503,7 +503,7 @@ mark {
 .blockquote-footer {
     display: block;
     font-size: 80%;
-/*     color: #6c757d */
+    color: #6c757d
 }
 
 .blockquote-footer::before {
@@ -517,7 +517,7 @@ mark {
 
 .img-thumbnail {
     padding: .25rem;
-/*     background-color: #fff; */
+    background-color: #fff;
     border: 1px solid #dee2e6;
     border-radius: .25rem;
     max-width: 100%;
@@ -535,12 +535,12 @@ mark {
 
 .figure-caption {
     font-size: 90%;
-/*     color: #6c757d */
+    color: #6c757d
 }
 
 code {
     font-size: 87.5%;
-/*     color: #e83e8c; */
+    color: #e83e8c;
     word-break: break-word
 }
 
@@ -551,8 +551,8 @@ a>code {
 kbd {
     padding: .2rem .4rem;
     font-size: 87.5%;
-/*     color: #fff; */
-/*     background-color: #212529; */
+    color: #fff;
+    background-color: #212529;
     border-radius: .2rem
 }
 
@@ -565,7 +565,7 @@ kbd kbd {
 pre {
     display: block;
     font-size: 87.5%;
-/*     color: #212529 */
+    color: #212529
 }
 
 pre code {
@@ -4486,37 +4486,37 @@ input[type=submit].btn-block {
 }
 
 .navbar-light .navbar-brand {
-/*     color: rgba(0, 0, 0, .9) */
+    color: rgba(0, 0, 0, .9)
 }
 
 .navbar-light .navbar-brand:focus,
 .navbar-light .navbar-brand:hover {
-/*     color: rgba(0, 0, 0, .9) */
+    color: rgba(0, 0, 0, .9)
 }
 
 .navbar-light .navbar-nav .nav-link {
-/*     color: rgba(0, 0, 0, .5) */
+    color: rgba(0, 0, 0, .5)
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-/*     color: rgba(0, 0, 0, .7) */
+    color: rgba(0, 0, 0, .7)
 }
 
 .navbar-light .navbar-nav .nav-link.disabled {
-/*     color: rgba(0, 0, 0, .3) */
+    color: rgba(0, 0, 0, .3)
 }
 
 .navbar-light .navbar-nav .active>.nav-link,
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .show>.nav-link {
-/*     color: rgba(0, 0, 0, .9) */
+    color: rgba(0, 0, 0, .9)
 }
 
 .navbar-light .navbar-toggler {
-/*     color: rgba(0, 0, 0, .5); */
-/*     border-color: rgba(0, 0, 0, .1) */
+    color: rgba(0, 0, 0, .5);
+    border-color: rgba(0, 0, 0, .1)
 }
 
 .navbar-light .navbar-toggler-icon {
@@ -4524,50 +4524,50 @@ input[type=submit].btn-block {
 }
 
 .navbar-light .navbar-text {
-/*     color: rgba(0, 0, 0, .5) */
+    color: rgba(0, 0, 0, .5)
 }
 
 .navbar-light .navbar-text a {
-/*     color: rgba(0, 0, 0, .9) */
+    color: rgba(0, 0, 0, .9)
 }
 
 .navbar-light .navbar-text a:focus,
 .navbar-light .navbar-text a:hover {
-/*     color: rgba(0, 0, 0, .9) */
+    color: rgba(0, 0, 0, .9)
 }
 
 .navbar-dark .navbar-brand {
-/*     color: #fff */
+    color: #fff
 }
 
 .navbar-dark .navbar-brand:focus,
 .navbar-dark .navbar-brand:hover {
-/*     color: #fff */
+    color: #fff
 }
 
 .navbar-dark .navbar-nav .nav-link {
-/*     color: rgba(255, 255, 255, .5) */
+    color: rgba(255, 255, 255, .5)
 }
 
 .navbar-dark .navbar-nav .nav-link:focus,
 .navbar-dark .navbar-nav .nav-link:hover {
-/*     color: rgba(255, 255, 255, .75) */
+    color: rgba(255, 255, 255, .75)
 }
 
 .navbar-dark .navbar-nav .nav-link.disabled {
-/*     color: rgba(255, 255, 255, .25) */
+    color: rgba(255, 255, 255, .25)
 }
 
 .navbar-dark .navbar-nav .active>.nav-link,
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .show>.nav-link {
-/*     color: #fff */
+    color: #fff
 }
 
 .navbar-dark .navbar-toggler {
-/*     color: rgba(255, 255, 255, .5); */
-/*     border-color: rgba(255, 255, 255, .1) */
+    color: rgba(255, 255, 255, .5);
+    border-color: rgba(255, 255, 255, .1)
 }
 
 .navbar-dark .navbar-toggler-icon {
@@ -4575,16 +4575,16 @@ input[type=submit].btn-block {
 }
 
 .navbar-dark .navbar-text {
-/*     color: rgba(255, 255, 255, .5) */
+    color: rgba(255, 255, 255, .5)
 }
 
 .navbar-dark .navbar-text a {
-/*     color: #fff */
+    color: #fff
 }
 
 .navbar-dark .navbar-text a:focus,
 .navbar-dark .navbar-text a:hover {
-/*     color: #fff */
+    color: #fff
 }
 
 .card {
