--- a/css/style.css
+++ b/css/style.css
@@ -2697,7 +2697,7 @@ h6 {
     margin-bottom: 18px;
     text-transform: uppercase; }
   .welcome_text p {
-    max-width: 495px;
+/*     max-width: 495px; */
     line-height: 24px;
     font-family: "Roboto", sans-serif;
     font-size: 14px;
