--- a/css/responsive.css
+++ b/css/responsive.css
@@ -276,7 +276,7 @@
 		margin-top: 0px;
 	}
 	.home_banner_area .banner_inner .banner_content img{
-		display: none;
+		display: block;
 	}
 	.home_banner_area .banner_inner .banner_content h5 {
 		margin-top: 0px;
@@ -331,7 +331,7 @@
 		padding-bottom: 70px;
 	}
 	.home_banner_area .banner_inner .home_left_img {
-		/*display: none;*/
+		display: none;
 	}
 	.home_banner_area .banner_inner .banner_content {
 		padding-top: 0px;
