--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -221,7 +221,8 @@ button:focus {
 .home_banner_area {
   z-index: 1;
   background: url(../img/banner/banner_updated.png) repeat scroll center center;
-  background-size: cover; }
+  background-repeat: repeat;
+/*   background-size: cover; } */
   .home_banner_area .banner_inner {
     width: 100%; }
     .home_banner_area .banner_inner .home_left_img {
