--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -1,3 +1,8 @@
+.light-mode{color:#1d1e21!important;background:#fff!important;}
+button{  background: url(../img/sun.svg) no-repeat;  color: transparent;  box-shadow: none;  border: none;  width: 50px;  height: 50px;  background-position: center;  position: absolute;  cursor: pointer;  }
+.light-mode button{background: url(../img/moon.svg) no-repeat; background-position: center;}
+button:focus {outline:0;}
+
 @import url("https://fonts.googleapis.com/css?family=Heebo:300,400,500,700|Roboto:300,400,500,700");
 /*---------------------------------------------------- */
 .list {
