--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -1,7 +1,24 @@
-.light-mode{color:#fff!important;background:#1d1e21!important;}
-button a{  background: url(../img/sun.svg) no-repeat;  /*color: transparent;*/  box-shadow: none;  border: none;  width: 50px;  height: 50px;  background-position: center;  position: absolute;  cursor: pointer;  }
-.light-mode button{background: url(../img/moon.svg) no-repeat; background-position: center;}
-button:focus a:focus a:hover{outline:0;}
+.light-mode{
+	color:#fff!important;
+	background:#1d1e21!important;
+}
+nav-item button a{ 
+	background: url(../img/sun.svg) no-repeat;  
+	/*color: transparent;*/  
+	box-shadow: none;  
+	border: none;  
+	width: 50px;  
+	height: 50px;  
+	background-position: center;  
+	position: absolute;  
+	cursor: pointer;  }
+.nav-item button{
+	background: url(../img/moon.svg) no-repeat;
+	background-position: center;
+}
+.nav-item button:focus a:focus a:hover{
+	outline:0;
+}
 
 @import url("https://fonts.googleapis.com/css?family=Heebo:300,400,500,700|Roboto:300,400,500,700");
 /*---------------------------------------------------- */
