--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -4,17 +4,20 @@
 }
 nav-item button a{ 
 	background: url(../img/sun.svg) no-repeat;  
-	/*color: transparent;*/  
+	color: transparent;  
 	box-shadow: none;  
 	border: none;  
 	width: 50px;  
 	height: 50px;  
 	background-position: center;  
 	position: absolute;  
-	cursor: pointer;  }
+	cursor: pointer;
+	outline: 0;
+}
 .nav-item button{
 	background: url(../img/moon.svg) no-repeat;
 	background-position: center;
+	outline: 0;
 }
 .nav-item button:focus a:focus a:hover{
 	outline:0;
