--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -1,8 +1,8 @@
 .light-mode{
-	color:#fff!important;
-	background:#1d1e21!important;
+	color:#1d1e21!important;
+	background:#fff!important;
 }
-nav-item button a{ 
+.nav-item button a{ 
 	background: url(../img/sun.svg) no-repeat;  
 	color: transparent;  
 	box-shadow: none;  
@@ -10,8 +10,7 @@ nav-item button a{
 	width: 50px;  
 	height: 50px;  
 	background-position: center;  
-	position: absolute;  
-	cursor: pointer;
+	position: absolute; 
 	outline: 0;
 	border: 0;
 }
