--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -9,7 +9,7 @@
 	border: none;  
 	width: 50px;  
 	height: 50px;  
-	background-position: center;  
+	background-position: inline;  
 	position: absolute; 
 	cursor: pointer!important;
 	outline: 0;
@@ -17,7 +17,7 @@
 }
 .nav-item button{
 	background: url(../img/moon.svg) no-repeat;
-	background-position: center;
+	background-position: inline;
 	cursor: pointer!important;
 	outline: 0;
 	border: 0;
