--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -49,7 +49,9 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   font-weight: normal;
-  color: #777777; }
+  color: #fff!important;
+  background:1d1e21!important;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Heebo", sans-serif;
