--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -47,7 +47,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: normal;
   color: #fff!important;
-  background:1d1e21!important;
+  background:#1d1e21!important;
 }
 
 h1, h2, h3, h4, h5, h6 {
