--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -1,8 +1,8 @@
 .light-mode{color:#fff!important;background:#1d1e21!important;}
-button{  background: url(../img/moon.svg) no-repeat;  color: transparent;  box-shadow: none;  border: none;  background-position: center;  position: right;  cursor: pointer;  }
+.dark_btn button{  background: url(../img/moon.svg) no-repeat;  color: transparent;  box-shadow: none;  border: none;  background-position: center;  position: left;  cursor: pointer;  }
 
-.light-mode button{background: url(../img/sun.svg) no-repeat; background-position: center;}
-button:focus {outline:0;}
+.light-mode .dark_btn button{background: url(../img/sun.svg) no-repeat; background-position: center;}
+.dark_btn button:focus {outline:0;}
 
 @import url("https://fonts.googleapis.com/css?family=Heebo:300,400,500,700|Roboto:300,400,500,700");
 /*---------------------------------------------------- */
