--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -282,7 +282,7 @@ button:focus {
     font-family: "Roboto", sans-serif; }
 .l_blog_item .l_blog_text h4 {
   font-size: 21px;
-  color: #222222;
+  /*color: #222222;*/
   margin-bottom: 20px;
   transition: all 300ms linear 0s;
   font-family: "Heebo", sans-serif;
@@ -290,7 +290,7 @@ button:focus {
   text-transform: uppercase;
   max-width: 300px; }
   .l_blog_item .l_blog_text h4:hover {
-    color: #8490ff; }
+    /*color: #8490ff;*/ }
 .l_blog_item .l_blog_text p {
   margin-bottom: 0px;
   font-size: 14px;
@@ -396,7 +396,7 @@ h6 {
 .welcome_text {
   margin-top: 45px; }
   .welcome_text h4 {
-    color: #222222;
+   /* color: #222222;*/
     font-family: "Heebo", sans-serif;
     font-size: 36px;
     margin-bottom: 18px;
@@ -421,7 +421,7 @@ h6 {
     font-size: 24px;
     font-family: "Heebo", sans-serif;
     font-weight: bold;
-    color: #222222;
+    /*color: #222222;*/
     margin-bottom: 5px;
     margin-top: 10px; }
   .wel_item p {
@@ -500,7 +500,7 @@ h6 {
       color: #e1e1e1;
       line-height: 60px; }
   .feature_item h4 {
-    color: #222222;
+   /* color: #222222;*/
     font-size: 21px;
     font-family: "Heebo", sans-serif;
     font-weight: bold;
@@ -568,7 +568,7 @@ h6 {
       font-size: 21px;
       font-family: "Heebo", sans-serif;
       font-weight: bold;
-      color: #222222;
+   /*   color: #222222;*/
       margin-bottom: 5px;
       transition: all 300ms linear 0s;
       text-transform: uppercase;
