--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -13,6 +13,7 @@
 
 a {
   text-decoration: none;
+  color: inherit!important;
   transition: all 0.3s ease-in-out; }
   a:hover, a:focus {
     text-decoration: none;
