--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -1,4 +1,4 @@
-.light-mode{color:#fff!important;background:#1d1e21!important;}
+.light-mode{color:#777777!important;background:#1d1e21!important;}
 .dark_btn{  background: url(../img/moon.svg) no-repeat;  color: transparent;  box-shadow: none;  border: none;  background-position: center;  position: left;  cursor: pointer;  }
 
 .light-mode .dark_btn{background: url(../img/sun.svg) no-repeat; background-position: center;}
