--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -108,7 +108,8 @@ button:focus {
   z-index: 99;
   transition: background 0.4s, all 0.3s linear; }
   .header_area .navbar {
-    background: transparent!important;
+    background: #000410!important;
+    opacity: 0.7;
     padding: 0px;
     border: 0px;
     border-radius: 0px; }
