--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -1,7 +1,7 @@
 .light-mode{color:#777777!important;background:#1d1e21!important;}
-.dark_btn{  background: url(../img/moon.svg) no-repeat;  fill: #fff; color: transparent;  box-shadow: none;  border: none;  background-position: center;  position: left;  cursor: pointer;  }
+.dark_btn{  background: url(../img/moon.svg) no-repeat;  color: #fff;  box-shadow: none;  border: none;  background-position: center;  position: left;  cursor: pointer;  }
 
-.light-mode .dark_btn{background: url(../img/sun.svg) no-repeat; background-position: center;}
+.light-mode .dark_btn{background: url(../img/sun.svg) no-repeat; color: #fff; background-position: center;}
 .dark_btn button:focus {outline:0;}
 
 @import url("https://fonts.googleapis.com/css?family=Heebo:300,400,500,700|Roboto:300,400,500,700");
