--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -555,14 +555,14 @@ h6 {
   margin-bottom: -30px; }
 
 .projects_item {
-  position: relative;
+/*   position: relative; */
   border-radius: 5px;
   overflow: hidden;
   margin-bottom: 30px; }
   .projects_item:before {
     content: "";
     background: rgba(255, 255, 255, 0.8);
-    position: absolute;
+/*     position: absolute; */
     left: 0px;
     top: 0px;
     width: 100%;
@@ -570,7 +570,7 @@ h6 {
     opacity: 0;
     transition: all 300ms ease; }
   .projects_item .projects_text {
-    position: absolute;
+/*     position: absolute; */
     left: 0px;
     bottom: 30px;
     padding-left: 30px;
