--- a/css/responsive.css
+++ b/css/responsive.css
@@ -252,7 +252,7 @@
 }
 @media (max-width:600px){
 	.projects_item .projects_text{
-		position: center!important;
+		display: inline;
 	}
 	.img-fluid{
 		display: none;
@@ -261,7 +261,7 @@
 }
 @media (max-width:575px){
 	.projects_item .projects_text{
-		position: center!important;
+		display: inline;
 	}
 	.img-fluid{
 		display: none;
@@ -368,7 +368,7 @@
 		display: none;
 	}
 	.projects_item .projects_text{
-		position: center!important;
+		display: inline;
 	}
 	/* Main Menu Area css
 	============================================================================================ */
