--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -555,7 +555,7 @@ h6 {
   margin-bottom: -30px; }
 
 .projects_item {
-/*   position: relative; */
+  position: relative;
   border-radius: 5px;
   overflow: hidden;
   margin-bottom: 30px; }
